--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
+    "@quasar/quasar-app-extension-qmarkdown": "^1.4.1",
+    "@quasar/quasar-app-extension-qribbon": "^1.0.0-beta.15",
     "babel-eslint": "^10.0.1",
     "eslint": "^7.21.0",
     "eslint-config-standard": "^16.0.2",
